# api_hidro

./: .gitignore  README.md  pyproject.toml
src/api_hidro/: __init__.py  constants.py  data_types.py  enums.py  errors.py  sync_request.py  token_authentication.py  types.py  utils.py
src/api_hidro/api_requests/: hidro_inventario.py  hidro_serie.py  hidro_telemetrica.py  models.py  sync_request.py
src/api_hidro/async_requests/: hidro_inventario.py  hidro_serie.py  hidro_telemetrica.py  models.py
src/api_hidro/models/: api_response_models.py  models.py
tests/async_requests/: test_hidro_inventario.py  test_hidro_serie.py  test_hidro_telemetrica.py  test_models.py
